--- a/src/main/resources/pl/lublin/wsei/java/cwiczenia/gusInfoGraphic.fxml
+++ b/src/main/resources/pl/lublin/wsei/java/cwiczenia/gusInfoGraphic.fxml
@@ -15,7 +15,7 @@
       <Label layoutX="434.0" layoutY="149.0" text="Miniaturka" />
       <ImageView fx:id="imgMiniaturka" fitHeight="281.0" fitWidth="338.0" layoutX="434.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true" />
       <TextField fx:id="txtAdresStrony" editable="false" layoutX="61.0" layoutY="576.0" prefHeight="25.0" prefWidth="520.0" />
-      <Button fx:id="btnPokazInfografike" layoutX="635.0" layoutY="456.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Pokaż" />
+      <Button fx:id="btnPokazInfografike" layoutX="635.0" layoutY="456.0" mnemonicParsing="false" onAction="#btnPokaz" prefHeight="25.0" prefWidth="94.0" text="Pokaż" />
       <Button fx:id="btnPrzejdzDoStrony" layoutX="635.0" layoutY="576.0" mnemonicParsing="false" onAction="#btnZaladujStrone" prefHeight="25.0" prefWidth="94.0" text="Załaduj" />
    </children>
 </AnchorPane>
